# HumanFramework

./: .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  action_loader.py  build.sh  human.py  pytest.ini  requirements.txt  setup.cfg  setup.py
actions/assert/: __init__.py
actions/math/: __init__.py
actions/web/: __init__.py
hf_actions/assert/: __init__.py
hf_actions/core/: __init__.py
hf_actions/web/: __init__.py
human_framework/: VERSION  __init__.py  action_loader.py
human_framework/templates/: report.html
images/: architecture.drawio
templates/: report.html
tests/: test_runner.py
tests/action/: sample.html  test_assert_action.py  test_math.py  test_math_action.py  test_web_action.py
tests/parser/: test_assert_parse.py  test_math.py  test_math_parse.py  test_web_parse.py
train/: Human Framework.json  data.json  en.json
trials/: test_devpost.txt  test_failing.txt  test_login.txt  test_simple.txt  test_web.txt
