[metadata]
name=humanframework
version=0.5.0
download_url=https://github.com/roniemartinez/HumanFramework/tarball/0.5.0
description=Human Framework: Test Automation Framework for Humans™
long_description=file:README.md
description-file=README.md
long_description_content_type=text/markdown
author=Ronie Martinez
author_email=ronmarti18@gmail.com
url=https://github.com/roniemartinez/HumanFramework
license_files=LICENSE
classifiers=
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules=
    human
packages=
    human_framework
    hf_actions.assert
    hf_actions.core
    hf_actions.math
    hf_actions.web
install_requires=
    diskcache==4.0.0
    Jinja2==2.10.1
    python-dotenv==0.10.3
    requests==2.22.0
    selenium==3.141.0

[options.entry_points]
console_scripts=
    human=human:main

[bdist_wheel]
universal=1